# whales

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  virtual_screening_pipeline.ipynb
OLD/whales/: README.md  scaffold_hopping.yml  virtual_screening_pipeline.ipynb
OLD/whales/src/whales/: __init__.py  chem_tools.py  do_whales.py  lcm.py  utils.py
data/: library.sdf
src/whales/: __init__.py  chem_tools.py  do_whales.py  lcm.py  mol_properties.py
whales/: chem_tools.py
