[project]
name = "whales"
dynamic = ["version"]
dependencies = ["rdkit", "seaborn", "matplotlib"]
requires-python = ">=3.9,<4.0"
authors = [{ name = "Fransesca Grisoni" }]
description = "Refactoring of WHALES fingerprint code"
readme = "README.md"
license = "MIT"

[project.urls]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "coverage[toml]", "vulture"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "whales/__init__.py"

[tool.mypy]
strict = true
disable_error_code = "import-untyped"
enable_error_code = """type-arg,no-untyped-def,redundant-cast,redundant-self,comparison-overlap,
                    no-untyped-call,no-any-return,no-any-unimported,unreachable,deprecated,redundant-expr,
                    possibly-undefined,truthy-bool,truthy-iterable,ignore-without-code,
                    unused-awaitable,unused-ignore,explicit-override,unimported-reveal,mutable-override,unimported-reveal,explicit-any"""

# untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

exclude = ["build", "docs"]

[tool.coverage.run]
source = ["tests", "whales"]
command_line = "-m pytest"
branch = true

[tool.coverage.report]
omit = ["_types.py"]
exclude_also = ["if TYPE_CHECKING:", 'if __name__ == "__main__"', "@overload"]
fail_under = 100
show_missing = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = [
  "error",
  "ignore::pytest.PytestCacheWarning",
  "ignore::DeprecationWarning",
]
testpaths = ["tests"]

[tool.vulture]
ignore_names = ["_*", "unused_*"]
paths = [".whitelist", "tests", "whales"]
make_whitelist = true
sort_by_size = true
verbose = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
dummy-variable-rgx = "^(dummy_.*|unused_.*|_)$"

select = ["ALL"]

ignore = [
  "PLC0415", # `import` should be at the top-level of a file
  "ISC001", # implicit-str-concat
  "COM812", # missing-trailing-comma
  "S301", # `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue
  "TD003",  # Missing issue link on the line following this TODO
  "FIX002", # Line contains TODO, consider resolving the issue
  "FBT001", # Boolean-typed positional argument in function definition
  "FBT002", # Boolean default positional argument
  "FBT003", # Boolean positional value in function call
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
  "EM101",  # Exception must not use a string literal, assign to variable first
  "EM102",  # Exception must not use an f-string literal, assign to variable first
  "TRY003", # Avoid specifying long messages outside the exception class
  "TRY300", # Use of else blocks in try/except
  "D105", # Missing docstring in magic method
  # custom
  "D103", # Missing docstring in public function
  "D205", # 1 blank line required between summary line and description"
  "D415", # First line should end with a period, question mark, or exclamation point

  "T201", # `print` found
  "TD002", # Missing author in TODO
  "TD004", # Missing colon in TODO
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
# Stub files for C extensions are allowed to have docstrings and overwrite __doc__, __version__, etc.
"_*.pyi" = ["PYI021", "A"]

# conf.py automatically created by Sphinx
"docs/conf.py" = ["INP001", "D100", "ERA001", "A"]

# Test files do not need to have docstrings at each test function
# S101: assert, PLR2004: magic value comparison, T20: print statements
"**/test_*.py" = ["INP001", "PLR2004", "S101", "D101", "D102", "D103", "T20"]
"tests/**" = ["INP001", "PLR2004", "S101", "D101", "D102", "D103", "T20"]
